src/main/java/AnalisisLexico/y.output
   0  $accept : Programa $end

   1  Programa : '{' ListSentencias '}'
   2           | error ListSentencias '}'

   3  ListSentencias : ListSentencias Sentencia ','
   4                 | Sentencia ','

   5  Sentencia : SentenciaControl
   6            | SentenciaEjecutable
   7            | SentenciaDeclarativa
   8            | RETURN ','

   9  ReferenciaObjeto : ID '.' ID

  10  ReferenciaObjetoFuncion : ID '.' LlamadoFuncion

  11  SentenciaEjecutable : Asignacion
  12                      | LlamadoFuncion
  13                      | BloqueIF
  14                      | SalidaMensaje
  15                      | ReferenciaObjetoFuncion

  16  ListSentenciasClase : ListSentenciasClase SentenciaDeclarativa ','
  17                      | SentenciaDeclarativa ','
  18                      | RETURN ','
  19                      | ListSentenciasClase RETURN ','

  20  SentenciaDeclarativa : Tipo ListVariables
  21                       | ListFuncion
  22                       | error ListVariables
  23                       | Tipo error
  24                       | Clase
  25                       | Objeto_clase
  26                       | FuncionIMPL

  27  ListVariables : ID
  28                | ListVariables ';' ID

  29  Objeto_clase : ID ListVariablesObj

  30  ListVariablesObj : ID
  31                   | ListVariablesObj ';' ID

  32  Tipo : USHORT
  33       | INT
  34       | DOUBLE

  35  Constante : ENTERO
  36            | ENTEROCORTO
  37            | '-' ENTEROCORTO
  38            | PUNTOFLOTANTE
  39            | '-' ENTERO
  40            | '-' PUNTOFLOTANTE

  41  Expresion : Expresion '+' Termino
  42            | Expresion '-' Termino
  43            | Termino
  44            | ConversionExplicita

  45  Termino : Termino '*' Factor
  46          | Termino '/' Factor
  47          | Factor
  48          | Termino '*' Factor_RefObjeto
  49          | Termino '/' Factor_RefObjeto
  50          | Factor_RefObjeto

  51  Factor : ID
  52         | Constante

  53  Factor_RefObjeto : ReferenciaObjeto

  54  Condicion : '(' Expresion Comparador Expresion ')'
  55            | '(' Expresion Comparador Expresion error
  56            | error Expresion Comparador Expresion ')'

  57  BloqueIF : IF Condicion CuerpoIF ELSE CuerpoIF END_IF
  58           | IF Condicion CuerpoIF END_IF
  59           | IF Condicion CuerpoIF ELSE CuerpoIF error
  60           | IF Condicion CuerpoIF error
  61           | IF Condicion SentenciaEjecutable ',' ELSE CuerpoIF END_IF
  62           | IF Condicion SentenciaEjecutable ',' ELSE SentenciaEjecutable ',' END_IF
  63           | IF Condicion CuerpoIF ELSE SentenciaEjecutable ',' END_IF
  64           | IF Condicion SentenciaEjecutable ',' ELSE CuerpoIF error
  65           | IF Condicion SentenciaEjecutable ',' ELSE SentenciaEjecutable error
  66           | IF Condicion CuerpoIF ELSE SentenciaEjecutable ',' error
  67           | IF Condicion SentenciaEjecutable ',' error CuerpoIF END_IF
  68           | IF Condicion SentenciaEjecutable ',' error SentenciaEjecutable END_IF
  69           | IF Condicion SentenciaEjecutable error ELSE CuerpoIF END_IF
  70           | IF Condicion CuerpoIF ELSE SentenciaEjecutable error END_IF
  71           | IF Condicion SentenciaEjecutable error END_IF

  72  CuerpoIF : '{' SentenciasIF '}'
  73           | '{' SentenciasIF RETURN ',' '}'
  74           | '{' RETURN SentenciasIF ',' '}'
  75           | '{' SentenciasIF RETURN error '}'
  76           | error SentenciasIF '}'
  77           | '{' SentenciasIF error
  78           | '{' '}'

  79  SentenciasIF : ListaSentenciasIF
  80               | RETURN ','
  81               | RETURN error

  82  ListaSentenciasIF : error
  83                    | SentenciaEjecutable ','
  84                    | SentenciaEjecutable error
  85                    | ListaSentenciasIF SentenciaEjecutable ','

  86  Comparador : '<'
  87             | '>'
  88             | MAYORIGUAL
  89             | MENORIGUAL
  90             | IGUAL
  91             | DIST

  92  ListFuncion : Funcion
  93              | FuncionSinCuerpo

  94  Funcion : EncabezadoFuncion Parametro '{' ListSentenciasFuncion '}' RETURN ','
  95          | EncabezadoFuncion Parametro '{' ListSentenciasFuncion '}'
  96          | VOID error Parametro '{' ListSentenciasFuncion '}'

  97  EncabezadoFuncion : VOID ID

  98  Parametro : '(' Tipo ID ')'
  99            | '(' Tipo ID error
 100            | error Tipo ID ')'
 101            | '(' ')'
 102            | '(' error
 103            | error ')'

 104  ListSentenciasFuncion : ListSentenciasFuncion Sentencia ','
 105                        | Sentencia ','
 106                        | RETURN ','
 107                        | ListSentenciasFuncion RETURN ','
 108                        | SentenciaEjecutable error
 109                        | SentenciaDeclarativa error
 110                        | RETURN error

 111  LlamadoFuncion : ID '(' ')'
 112                 | ID error ')'
 113                 | ID '(' error
 114                 | ID '(' Expresion ')'

 115  SalidaMensaje : PRINT CADENA
 116                | PRINT Factor
 117                | PRINT error

 118  OperadorAsignacion : '='
 119                     | ASIG

 120  Asignacion : Factor OperadorAsignacion Expresion
 121             | ReferenciaObjeto OperadorAsignacion ReferenciaObjeto
 122             | ReferenciaObjeto OperadorAsignacion Factor
 123             | ReferenciaObjeto OperadorAsignacion error
 124             | Factor OperadorAsignacion error
 125             | OperadorAsignacion Factor

 126  SentenciaControl : DO CuerpoIF UNTIL Condicion
 127                   | DO CuerpoIF UNTIL error

 128  LlamadoExpresion : '(' Expresion ')'
 129                   | error Expresion ')'
 130                   | '(' Expresion error

 131  ParametroTOD : '(' Expresion ')'
 132               | error Expresion ')'
 133               | '(' Expresion error

 134  ConversionExplicita : TOD ParametroTOD
 135                      | TOD '(' ')'

 136  ListClase : '{' ListSentenciasClase '}'

 137  EncabezadoClase : CLASS ID

 138  Clase : EncabezadoClase ListClase

 139  FuncionSinCuerpo : EncabezadoFuncion Parametro

 140  FuncionIMPL : IMPL FOR ID ':' '{' Funcion '}'
 141              | IMPL FOR ID ':' error Funcion '}'
 142              | IMPL FOR ID ':' '{' Funcion error

state 0
	$accept : . Programa $end  (0)

	error  shift 1
	'{'  shift 2
	.  error

	Programa  goto 3


state 1
	Programa : error . ListSentencias '}'  (2)

	error  shift 4
	IF  shift 5
	PRINT  shift 6
	CLASS  shift 7
	VOID  shift 8
	DO  shift 9
	IMPL  shift 10
	INT  shift 11
	USHORT  shift 12
	DOUBLE  shift 13
	ID  shift 14
	ASIG  shift 15
	RETURN  shift 16
	ENTERO  shift 17
	ENTEROCORTO  shift 18
	PUNTOFLOTANTE  shift 19
	'-'  shift 20
	'='  shift 21
	.  error

	ListSentencias  goto 22
	Sentencia  goto 23
	SentenciaControl  goto 24
	SentenciaEjecutable  goto 25
	SentenciaDeclarativa  goto 26
	ReferenciaObjeto  goto 27
	ReferenciaObjetoFuncion  goto 28
	LlamadoFuncion  goto 29
	Asignacion  goto 30
	BloqueIF  goto 31
	SalidaMensaje  goto 32
	Tipo  goto 33
	ListFuncion  goto 34
	Clase  goto 35
	Objeto_clase  goto 36
	FuncionIMPL  goto 37
	Constante  goto 38
	Factor  goto 39
	Funcion  goto 40
	FuncionSinCuerpo  goto 41
	EncabezadoFuncion  goto 42
	OperadorAsignacion  goto 43
	EncabezadoClase  goto 44


state 2
	Programa : '{' . ListSentencias '}'  (1)

	error  shift 4
	IF  shift 5
	PRINT  shift 6
	CLASS  shift 7
	VOID  shift 8
	DO  shift 9
	IMPL  shift 10
	INT  shift 11
	USHORT  shift 12
	DOUBLE  shift 13
	ID  shift 14
	ASIG  shift 15
	RETURN  shift 16
	ENTERO  shift 17
	ENTEROCORTO  shift 18
	PUNTOFLOTANTE  shift 19
	'-'  shift 20
	'='  shift 21
	.  error

	ListSentencias  goto 45
	Sentencia  goto 23
	SentenciaControl  goto 24
	SentenciaEjecutable  goto 25
	SentenciaDeclarativa  goto 26
	ReferenciaObjeto  goto 27
	ReferenciaObjetoFuncion  goto 28
	LlamadoFuncion  goto 29
	Asignacion  goto 30
	BloqueIF  goto 31
	SalidaMensaje  goto 32
	Tipo  goto 33
	ListFuncion  goto 34
	Clase  goto 35
	Objeto_clase  goto 36
	FuncionIMPL  goto 37
	Constante  goto 38
	Factor  goto 39
	Funcion  goto 40
	FuncionSinCuerpo  goto 41
	EncabezadoFuncion  goto 42
	OperadorAsignacion  goto 43
	EncabezadoClase  goto 44


state 3
	$accept : Programa . $end  (0)

	$end  accept


state 4
	SentenciaDeclarativa : error . ListVariables  (22)

	ID  shift 46
	.  error

	ListVariables  goto 47


state 5
	BloqueIF : IF . Condicion CuerpoIF ELSE CuerpoIF END_IF  (57)
	BloqueIF : IF . Condicion CuerpoIF END_IF  (58)
	BloqueIF : IF . Condicion CuerpoIF ELSE CuerpoIF error  (59)
	BloqueIF : IF . Condicion CuerpoIF error  (60)
	BloqueIF : IF . Condicion SentenciaEjecutable ',' ELSE CuerpoIF END_IF  (61)
	BloqueIF : IF . Condicion SentenciaEjecutable ',' ELSE SentenciaEjecutable ',' END_IF  (62)
	BloqueIF : IF . Condicion CuerpoIF ELSE SentenciaEjecutable ',' END_IF  (63)
	BloqueIF : IF . Condicion SentenciaEjecutable ',' ELSE CuerpoIF error  (64)
	BloqueIF : IF . Condicion SentenciaEjecutable ',' ELSE SentenciaEjecutable error  (65)
	BloqueIF : IF . Condicion CuerpoIF ELSE SentenciaEjecutable ',' error  (66)
	BloqueIF : IF . Condicion SentenciaEjecutable ',' error CuerpoIF END_IF  (67)
	BloqueIF : IF . Condicion SentenciaEjecutable ',' error SentenciaEjecutable END_IF  (68)
	BloqueIF : IF . Condicion SentenciaEjecutable error ELSE CuerpoIF END_IF  (69)
	BloqueIF : IF . Condicion CuerpoIF ELSE SentenciaEjecutable error END_IF  (70)
	BloqueIF : IF . Condicion SentenciaEjecutable error END_IF  (71)

	error  shift 48
	'('  shift 49
	.  error

	Condicion  goto 50


state 6
	SalidaMensaje : PRINT . CADENA  (115)
	SalidaMensaje : PRINT . Factor  (116)
	SalidaMensaje : PRINT . error  (117)

	error  shift 51
	ID  shift 52
	CADENA  shift 53
	ENTERO  shift 17
	ENTEROCORTO  shift 18
	PUNTOFLOTANTE  shift 19
	'-'  shift 20
	.  error

	Constante  goto 38
	Factor  goto 54


state 7
	EncabezadoClase : CLASS . ID  (137)

	ID  shift 55
	.  error


state 8
	Funcion : VOID . error Parametro '{' ListSentenciasFuncion '}'  (96)
	EncabezadoFuncion : VOID . ID  (97)

	error  shift 56
	ID  shift 57
	.  error


state 9
	SentenciaControl : DO . CuerpoIF UNTIL Condicion  (126)
	SentenciaControl : DO . CuerpoIF UNTIL error  (127)

	error  shift 58
	'{'  shift 59
	.  error

	CuerpoIF  goto 60


state 10
	FuncionIMPL : IMPL . FOR ID ':' '{' Funcion '}'  (140)
	FuncionIMPL : IMPL . FOR ID ':' error Funcion '}'  (141)
	FuncionIMPL : IMPL . FOR ID ':' '{' Funcion error  (142)

	FOR  shift 61
	.  error


state 11
	Tipo : INT .  (33)

	.  reduce 33


state 12
	Tipo : USHORT .  (32)

	.  reduce 32


state 13
	Tipo : DOUBLE .  (34)

	.  reduce 34


state 14
	ReferenciaObjeto : ID . '.' ID  (9)
	ReferenciaObjetoFuncion : ID . '.' LlamadoFuncion  (10)
	Objeto_clase : ID . ListVariablesObj  (29)
	Factor : ID .  (51)
	LlamadoFuncion : ID . '(' ')'  (111)
	LlamadoFuncion : ID . error ')'  (112)
	LlamadoFuncion : ID . '(' error  (113)
	LlamadoFuncion : ID . '(' Expresion ')'  (114)

	error  shift 62
	ID  shift 63
	'.'  shift 64
	'('  shift 65
	ASIG  reduce 51
	'='  reduce 51

	ListVariablesObj  goto 66


state 15
	OperadorAsignacion : ASIG .  (119)

	.  reduce 119


state 16
	Sentencia : RETURN . ','  (8)

	','  shift 67
	.  error


state 17
	Constante : ENTERO .  (35)

	.  reduce 35


state 18
	Constante : ENTEROCORTO .  (36)

	.  reduce 36


state 19
	Constante : PUNTOFLOTANTE .  (38)

	.  reduce 38


state 20
	Constante : '-' . ENTEROCORTO  (37)
	Constante : '-' . ENTERO  (39)
	Constante : '-' . PUNTOFLOTANTE  (40)

	ENTERO  shift 68
	ENTEROCORTO  shift 69
	PUNTOFLOTANTE  shift 70
	.  error


state 21
	OperadorAsignacion : '=' .  (118)

	.  reduce 118


state 22
	Programa : error ListSentencias . '}'  (2)
	ListSentencias : ListSentencias . Sentencia ','  (3)

	error  shift 4
	IF  shift 5
	PRINT  shift 6
	CLASS  shift 7
	VOID  shift 8
	DO  shift 9
	IMPL  shift 10
	INT  shift 11
	USHORT  shift 12
	DOUBLE  shift 13
	ID  shift 14
	ASIG  shift 15
	RETURN  shift 16
	ENTERO  shift 17
	ENTEROCORTO  shift 18
	PUNTOFLOTANTE  shift 19
	'}'  shift 71
	'-'  shift 20
	'='  shift 21
	.  error

	Sentencia  goto 72
	SentenciaControl  goto 24
	SentenciaEjecutable  goto 25
	SentenciaDeclarativa  goto 26
	ReferenciaObjeto  goto 27
	ReferenciaObjetoFuncion  goto 28
	LlamadoFuncion  goto 29
	Asignacion  goto 30
	BloqueIF  goto 31
	SalidaMensaje  goto 32
	Tipo  goto 33
	ListFuncion  goto 34
	Clase  goto 35
	Objeto_clase  goto 36
	FuncionIMPL  goto 37
	Constante  goto 38
	Factor  goto 39
	Funcion  goto 40
	FuncionSinCuerpo  goto 41
	EncabezadoFuncion  goto 42
	OperadorAsignacion  goto 43
	EncabezadoClase  goto 44


state 23
	ListSentencias : Sentencia . ','  (4)

	','  shift 73
	.  error


state 24
	Sentencia : SentenciaControl .  (5)

	.  reduce 5


state 25
	Sentencia : SentenciaEjecutable .  (6)

	.  reduce 6


state 26
	Sentencia : SentenciaDeclarativa .  (7)

	.  reduce 7


state 27
	Asignacion : ReferenciaObjeto . OperadorAsignacion ReferenciaObjeto  (121)
	Asignacion : ReferenciaObjeto . OperadorAsignacion Factor  (122)
	Asignacion : ReferenciaObjeto . OperadorAsignacion error  (123)

	ASIG  shift 15
	'='  shift 21
	.  error

	OperadorAsignacion  goto 74


state 28
	SentenciaEjecutable : ReferenciaObjetoFuncion .  (15)

	.  reduce 15


state 29
	SentenciaEjecutable : LlamadoFuncion .  (12)

	.  reduce 12


state 30
	SentenciaEjecutable : Asignacion .  (11)

	.  reduce 11


state 31
	SentenciaEjecutable : BloqueIF .  (13)

	.  reduce 13


state 32
	SentenciaEjecutable : SalidaMensaje .  (14)

	.  reduce 14


state 33
	SentenciaDeclarativa : Tipo . ListVariables  (20)
	SentenciaDeclarativa : Tipo . error  (23)

	error  shift 75
	ID  shift 46
	.  error

	ListVariables  goto 76


state 34
	SentenciaDeclarativa : ListFuncion .  (21)

	.  reduce 21


state 35
	SentenciaDeclarativa : Clase .  (24)

	.  reduce 24


state 36
	SentenciaDeclarativa : Objeto_clase .  (25)

	.  reduce 25


state 37
	SentenciaDeclarativa : FuncionIMPL .  (26)

	.  reduce 26


state 38
	Factor : Constante .  (52)

	.  reduce 52


state 39
	Asignacion : Factor . OperadorAsignacion Expresion  (120)
	Asignacion : Factor . OperadorAsignacion error  (124)

	ASIG  shift 15
	'='  shift 21
	.  error

	OperadorAsignacion  goto 77


state 40
	ListFuncion : Funcion .  (92)

	.  reduce 92


state 41
	ListFuncion : FuncionSinCuerpo .  (93)

	.  reduce 93


state 42
	Funcion : EncabezadoFuncion . Parametro '{' ListSentenciasFuncion '}' RETURN ','  (94)
	Funcion : EncabezadoFuncion . Parametro '{' ListSentenciasFuncion '}'  (95)
	FuncionSinCuerpo : EncabezadoFuncion . Parametro  (139)

	error  shift 78
	'('  shift 79
	.  error

	Parametro  goto 80


state 43
	Asignacion : OperadorAsignacion . Factor  (125)

	ID  shift 52
	ENTERO  shift 17
	ENTEROCORTO  shift 18
	PUNTOFLOTANTE  shift 19
	'-'  shift 20
	.  error

	Constante  goto 38
	Factor  goto 81


state 44
	Clase : EncabezadoClase . ListClase  (138)

	'{'  shift 82
	.  error

	ListClase  goto 83


state 45
	Programa : '{' ListSentencias . '}'  (1)
	ListSentencias : ListSentencias . Sentencia ','  (3)

	error  shift 4
	IF  shift 5
	PRINT  shift 6
	CLASS  shift 7
	VOID  shift 8
	DO  shift 9
	IMPL  shift 10
	INT  shift 11
	USHORT  shift 12
	DOUBLE  shift 13
	ID  shift 14
	ASIG  shift 15
	RETURN  shift 16
	ENTERO  shift 17
	ENTEROCORTO  shift 18
	PUNTOFLOTANTE  shift 19
	'}'  shift 84
	'-'  shift 20
	'='  shift 21
	.  error

	Sentencia  goto 72
	SentenciaControl  goto 24
	SentenciaEjecutable  goto 25
	SentenciaDeclarativa  goto 26
	ReferenciaObjeto  goto 27
	ReferenciaObjetoFuncion  goto 28
	LlamadoFuncion  goto 29
	Asignacion  goto 30
	BloqueIF  goto 31
	SalidaMensaje  goto 32
	Tipo  goto 33
	ListFuncion  goto 34
	Clase  goto 35
	Objeto_clase  goto 36
	FuncionIMPL  goto 37
	Constante  goto 38
	Factor  goto 39
	Funcion  goto 40
	FuncionSinCuerpo  goto 41
	EncabezadoFuncion  goto 42
	OperadorAsignacion  goto 43
	EncabezadoClase  goto 44


state 46
	ListVariables : ID .  (27)

	.  reduce 27


state 47
	SentenciaDeclarativa : error ListVariables .  (22)
	ListVariables : ListVariables . ';' ID  (28)

	';'  shift 85
	error  reduce 22
	','  reduce 22


state 48
	Condicion : error . Expresion Comparador Expresion ')'  (56)

	ID  shift 86
	TOD  shift 87
	ENTERO  shift 17
	ENTEROCORTO  shift 18
	PUNTOFLOTANTE  shift 19
	'-'  shift 20
	.  error

	ReferenciaObjeto  goto 88
	Constante  goto 38
	Expresion  goto 89
	Termino  goto 90
	ConversionExplicita  goto 91
	Factor  goto 92
	Factor_RefObjeto  goto 93


state 49
	Condicion : '(' . Expresion Comparador Expresion ')'  (54)
	Condicion : '(' . Expresion Comparador Expresion error  (55)

	ID  shift 86
	TOD  shift 87
	ENTERO  shift 17
	ENTEROCORTO  shift 18
	PUNTOFLOTANTE  shift 19
	'-'  shift 20
	.  error

	ReferenciaObjeto  goto 88
	Constante  goto 38
	Expresion  goto 94
	Termino  goto 90
	ConversionExplicita  goto 91
	Factor  goto 92
	Factor_RefObjeto  goto 93


state 50
	BloqueIF : IF Condicion . CuerpoIF ELSE CuerpoIF END_IF  (57)
	BloqueIF : IF Condicion . CuerpoIF END_IF  (58)
	BloqueIF : IF Condicion . CuerpoIF ELSE CuerpoIF error  (59)
	BloqueIF : IF Condicion . CuerpoIF error  (60)
	BloqueIF : IF Condicion . SentenciaEjecutable ',' ELSE CuerpoIF END_IF  (61)
	BloqueIF : IF Condicion . SentenciaEjecutable ',' ELSE SentenciaEjecutable ',' END_IF  (62)
	BloqueIF : IF Condicion . CuerpoIF ELSE SentenciaEjecutable ',' END_IF  (63)
	BloqueIF : IF Condicion . SentenciaEjecutable ',' ELSE CuerpoIF error  (64)
	BloqueIF : IF Condicion . SentenciaEjecutable ',' ELSE SentenciaEjecutable error  (65)
	BloqueIF : IF Condicion . CuerpoIF ELSE SentenciaEjecutable ',' error  (66)
	BloqueIF : IF Condicion . SentenciaEjecutable ',' error CuerpoIF END_IF  (67)
	BloqueIF : IF Condicion . SentenciaEjecutable ',' error SentenciaEjecutable END_IF  (68)
	BloqueIF : IF Condicion . SentenciaEjecutable error ELSE CuerpoIF END_IF  (69)
	BloqueIF : IF Condicion . CuerpoIF ELSE SentenciaEjecutable error END_IF  (70)
	BloqueIF : IF Condicion . SentenciaEjecutable error END_IF  (71)

	error  shift 58
	IF  shift 5
	PRINT  shift 6
	ID  shift 95
	ASIG  shift 15
	ENTERO  shift 17
	ENTEROCORTO  shift 18
	PUNTOFLOTANTE  shift 19
	'{'  shift 59
	'-'  shift 20
	'='  shift 21
	.  error

	SentenciaEjecutable  goto 96
	ReferenciaObjeto  goto 27
	ReferenciaObjetoFuncion  goto 28
	LlamadoFuncion  goto 29
	Asignacion  goto 30
	BloqueIF  goto 31
	SalidaMensaje  goto 32
	Constante  goto 38
	Factor  goto 39
	CuerpoIF  goto 97
	OperadorAsignacion  goto 43


state 51
	SalidaMensaje : PRINT error .  (117)

	.  reduce 117


state 52
	Factor : ID .  (51)

	.  reduce 51


state 53
	SalidaMensaje : PRINT CADENA .  (115)

	.  reduce 115


state 54
	SalidaMensaje : PRINT Factor .  (116)

	.  reduce 116


state 55
	EncabezadoClase : CLASS ID .  (137)

	.  reduce 137


state 56
	Funcion : VOID error . Parametro '{' ListSentenciasFuncion '}'  (96)

	error  shift 78
	'('  shift 79
	.  error

	Parametro  goto 98


state 57
	EncabezadoFuncion : VOID ID .  (97)

	.  reduce 97


state 58
	CuerpoIF : error . SentenciasIF '}'  (76)

	error  shift 99
	IF  shift 5
	PRINT  shift 6
	ID  shift 95
	ASIG  shift 15
	RETURN  shift 100
	ENTERO  shift 17
	ENTEROCORTO  shift 18
	PUNTOFLOTANTE  shift 19
	'-'  shift 20
	'='  shift 21
	.  error

	SentenciaEjecutable  goto 101
	ReferenciaObjeto  goto 27
	ReferenciaObjetoFuncion  goto 28
	LlamadoFuncion  goto 29
	Asignacion  goto 30
	BloqueIF  goto 31
	SalidaMensaje  goto 32
	Constante  goto 38
	Factor  goto 39
	SentenciasIF  goto 102
	ListaSentenciasIF  goto 103
	OperadorAsignacion  goto 43


state 59
	CuerpoIF : '{' . SentenciasIF '}'  (72)
	CuerpoIF : '{' . SentenciasIF RETURN ',' '}'  (73)
	CuerpoIF : '{' . RETURN SentenciasIF ',' '}'  (74)
	CuerpoIF : '{' . SentenciasIF RETURN error '}'  (75)
	CuerpoIF : '{' . SentenciasIF error  (77)
	CuerpoIF : '{' . '}'  (78)

	error  shift 99
	IF  shift 5
	PRINT  shift 6
	ID  shift 95
	ASIG  shift 15
	RETURN  shift 104
	ENTERO  shift 17
	ENTEROCORTO  shift 18
	PUNTOFLOTANTE  shift 19
	'}'  shift 105
	'-'  shift 20
	'='  shift 21
	.  error

	SentenciaEjecutable  goto 101
	ReferenciaObjeto  goto 27
	ReferenciaObjetoFuncion  goto 28
	LlamadoFuncion  goto 29
	Asignacion  goto 30
	BloqueIF  goto 31
	SalidaMensaje  goto 32
	Constante  goto 38
	Factor  goto 39
	SentenciasIF  goto 106
	ListaSentenciasIF  goto 103
	OperadorAsignacion  goto 43


state 60
	SentenciaControl : DO CuerpoIF . UNTIL Condicion  (126)
	SentenciaControl : DO CuerpoIF . UNTIL error  (127)

	UNTIL  shift 107
	.  error


state 61
	FuncionIMPL : IMPL FOR . ID ':' '{' Funcion '}'  (140)
	FuncionIMPL : IMPL FOR . ID ':' error Funcion '}'  (141)
	FuncionIMPL : IMPL FOR . ID ':' '{' Funcion error  (142)

	ID  shift 108
	.  error


state 62
	LlamadoFuncion : ID error . ')'  (112)

	')'  shift 109
	.  error


state 63
	ListVariablesObj : ID .  (30)

	.  reduce 30


state 64
	ReferenciaObjeto : ID '.' . ID  (9)
	ReferenciaObjetoFuncion : ID '.' . LlamadoFuncion  (10)

	ID  shift 110
	.  error

	LlamadoFuncion  goto 111


state 65
	LlamadoFuncion : ID '(' . ')'  (111)
	LlamadoFuncion : ID '(' . error  (113)
	LlamadoFuncion : ID '(' . Expresion ')'  (114)

	error  shift 112
	ID  shift 86
	TOD  shift 87
	ENTERO  shift 17
	ENTEROCORTO  shift 18
	PUNTOFLOTANTE  shift 19
	'-'  shift 20
	')'  shift 113
	.  error

	ReferenciaObjeto  goto 88
	Constante  goto 38
	Expresion  goto 114
	Termino  goto 90
	ConversionExplicita  goto 91
	Factor  goto 92
	Factor_RefObjeto  goto 93


state 66
	Objeto_clase : ID ListVariablesObj .  (29)
	ListVariablesObj : ListVariablesObj . ';' ID  (31)

	';'  shift 115
	error  reduce 29
	','  reduce 29


state 67
	Sentencia : RETURN ',' .  (8)

	.  reduce 8


state 68
	Constante : '-' ENTERO .  (39)

	.  reduce 39


state 69
	Constante : '-' ENTEROCORTO .  (37)

	.  reduce 37


state 70
	Constante : '-' PUNTOFLOTANTE .  (40)

	.  reduce 40


state 71
	Programa : error ListSentencias '}' .  (2)

	.  reduce 2


state 72
	ListSentencias : ListSentencias Sentencia . ','  (3)

	','  shift 116
	.  error


state 73
	ListSentencias : Sentencia ',' .  (4)

	.  reduce 4


state 74
	Asignacion : ReferenciaObjeto OperadorAsignacion . ReferenciaObjeto  (121)
	Asignacion : ReferenciaObjeto OperadorAsignacion . Factor  (122)
	Asignacion : ReferenciaObjeto OperadorAsignacion . error  (123)

	error  shift 117
	ID  shift 86
	ENTERO  shift 17
	ENTEROCORTO  shift 18
	PUNTOFLOTANTE  shift 19
	'-'  shift 20
	.  error

	ReferenciaObjeto  goto 118
	Constante  goto 38
	Factor  goto 119


state 75
	SentenciaDeclarativa : Tipo error .  (23)

	.  reduce 23


state 76
	SentenciaDeclarativa : Tipo ListVariables .  (20)
	ListVariables : ListVariables . ';' ID  (28)

	';'  shift 85
	error  reduce 20
	','  reduce 20


state 77
	Asignacion : Factor OperadorAsignacion . Expresion  (120)
	Asignacion : Factor OperadorAsignacion . error  (124)

	error  shift 120
	ID  shift 86
	TOD  shift 87
	ENTERO  shift 17
	ENTEROCORTO  shift 18
	PUNTOFLOTANTE  shift 19
	'-'  shift 20
	.  error

	ReferenciaObjeto  goto 88
	Constante  goto 38
	Expresion  goto 121
	Termino  goto 90
	ConversionExplicita  goto 91
	Factor  goto 92
	Factor_RefObjeto  goto 93


state 78
	Parametro : error . Tipo ID ')'  (100)
	Parametro : error . ')'  (103)

	INT  shift 11
	USHORT  shift 12
	DOUBLE  shift 13
	')'  shift 122
	.  error

	Tipo  goto 123


state 79
	Parametro : '(' . Tipo ID ')'  (98)
	Parametro : '(' . Tipo ID error  (99)
	Parametro : '(' . ')'  (101)
	Parametro : '(' . error  (102)

	error  shift 124
	INT  shift 11
	USHORT  shift 12
	DOUBLE  shift 13
	')'  shift 125
	.  error

	Tipo  goto 126


state 80
	Funcion : EncabezadoFuncion Parametro . '{' ListSentenciasFuncion '}' RETURN ','  (94)
	Funcion : EncabezadoFuncion Parametro . '{' ListSentenciasFuncion '}'  (95)
	FuncionSinCuerpo : EncabezadoFuncion Parametro .  (139)

	'{'  shift 127
	error  reduce 139
	','  reduce 139


state 81
	Asignacion : OperadorAsignacion Factor .  (125)

	.  reduce 125


state 82
	ListClase : '{' . ListSentenciasClase '}'  (136)

	error  shift 4
	CLASS  shift 7
	VOID  shift 8
	IMPL  shift 10
	INT  shift 11
	USHORT  shift 12
	DOUBLE  shift 13
	ID  shift 128
	RETURN  shift 129
	.  error

	SentenciaDeclarativa  goto 130
	ListSentenciasClase  goto 131
	Tipo  goto 33
	ListFuncion  goto 34
	Clase  goto 35
	Objeto_clase  goto 36
	FuncionIMPL  goto 37
	Funcion  goto 40
	FuncionSinCuerpo  goto 41
	EncabezadoFuncion  goto 42
	EncabezadoClase  goto 44


state 83
	Clase : EncabezadoClase ListClase .  (138)

	.  reduce 138


state 84
	Programa : '{' ListSentencias '}' .  (1)

	.  reduce 1


state 85
	ListVariables : ListVariables ';' . ID  (28)

	ID  shift 132
	.  error


state 86
	ReferenciaObjeto : ID . '.' ID  (9)
	Factor : ID .  (51)

	'.'  shift 133
	error  reduce 51
	END_IF  reduce 51
	IGUAL  reduce 51
	DIST  reduce 51
	MENORIGUAL  reduce 51
	MAYORIGUAL  reduce 51
	','  reduce 51
	'-'  reduce 51
	'+'  reduce 51
	'*'  reduce 51
	'/'  reduce 51
	')'  reduce 51
	'<'  reduce 51
	'>'  reduce 51


state 87
	ConversionExplicita : TOD . ParametroTOD  (134)
	ConversionExplicita : TOD . '(' ')'  (135)

	error  shift 134
	'('  shift 135
	.  error

	ParametroTOD  goto 136


state 88
	Factor_RefObjeto : ReferenciaObjeto .  (53)

	.  reduce 53


state 89
	Expresion : Expresion . '+' Termino  (41)
	Expresion : Expresion . '-' Termino  (42)
	Condicion : error Expresion . Comparador Expresion ')'  (56)

	IGUAL  shift 137
	DIST  shift 138
	MENORIGUAL  shift 139
	MAYORIGUAL  shift 140
	'-'  shift 141
	'+'  shift 142
	'<'  shift 143
	'>'  shift 144
	.  error

	Comparador  goto 145


state 90
	Expresion : Termino .  (43)
	Termino : Termino . '*' Factor  (45)
	Termino : Termino . '/' Factor  (46)
	Termino : Termino . '*' Factor_RefObjeto  (48)
	Termino : Termino . '/' Factor_RefObjeto  (49)

	'*'  shift 146
	'/'  shift 147
	error  reduce 43
	END_IF  reduce 43
	IGUAL  reduce 43
	DIST  reduce 43
	MENORIGUAL  reduce 43
	MAYORIGUAL  reduce 43
	','  reduce 43
	'-'  reduce 43
	'+'  reduce 43
	')'  reduce 43
	'<'  reduce 43
	'>'  reduce 43


state 91
	Expresion : ConversionExplicita .  (44)

	.  reduce 44


state 92
	Termino : Factor .  (47)

	.  reduce 47


state 93
	Termino : Factor_RefObjeto .  (50)

	.  reduce 50

